Added app/views/user_suggestions/chooseSuggestion.html.erb Added app/views/user_suggestions/new.html.erb Modified app/controllers/pages_controller.rb Modified app/controllers/user_suggestions_controller.rb Modified app/models/user_suggestion.rb Modified app/models/user_suggestions/index.html.erb Modified config/routes.rb

--- a/app/views/user_suggestions/index.html.erb
+++ b/app/views/user_suggestions/index.html.erb
@@ -19,3 +19,9 @@
   </tr>
 <% end %>
 </table>
+<% if cookies.signed[:user_id] > 0 %>
+  <%= link_to "Add suggestion", :controller => "user_suggestions",
+    :action => "new" %>
+  <%= link_to "Edit suggestion", :controller => "user_suggestions",
+    :action => "chooseSuggestion" %>
+<% end %>
